Refresh project page copy and disaster relief totals

--- a/awards.html
+++ b/awards.html
@@ -28,7 +28,8 @@
           <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
           <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
           <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="projects.html">Future Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="projects.html">Current Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="disaster-relief.html">Disaster Relief</a></li>
           <li class="nav-item"><a class="nav-link active" aria-current="page" href="awards.html">Awards &amp; Grants</a></li>
           <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
         </ul>
@@ -66,7 +67,7 @@
         <div class="col-lg-6">
           <div class="card p-4 border-0 shadow-sm">
             <h4 class="mb-3"><span class="underline">Home Depot Foundation Grant</span></h4>
-            <p style="font-size:17px;">Support from the Home Depot Foundation fuels hands-on service projects—improving spaces, building resources, and supplying materials for neighborhood-focused efforts that strengthen families and seniors in NOVA.</p>
+            <p style="font-size:17px;">Support from the Home Depot Foundation fuels hands-on service projects that improve spaces, building resources, and supplying materials for neighborhood-focused efforts that strengthen families and seniors in NOVA.</p>
           </div>
         </div>
       </div>
