--- a/blog.html
+++ b/blog.html
@@ -79,7 +79,8 @@
       <ul class="navbar-nav ms-auto me-1">
         <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
         <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="projects.html">Future Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="projects.html">Current Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="disaster-relief.html">Disaster Relief</a></li>
         <li class="nav-item"><a class="nav-link" href="awards.html">Awards &amp; Grants</a></li>
         <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
       </ul>
@@ -123,7 +124,7 @@
     <h4 class="mt-3 fw-bold">A Weekend of Firsts!</h4><br>
     <p>We started simple: just a table, some shirts, and brochures. It felt exciting but honestly, a bit intimidating.<br><br>
 
-Day one was tough. We stayed mostly behind the table, not really sure how to approach people. We made about <strong>$50</strong>—not bad, but far below what we were hoping for. <br><br>
+Day one was tough. We stayed mostly behind the table, not really sure how to approach people. We made about <strong>$50</strong>, which wasn’t bad, but it was far below what we were hoping for. <br><br>
 
 On day two, everything changed. A friendly visitor noticed us struggling and gave us simple, valuable advice: "Get out there and talk to people!" <br><br>
 
@@ -163,7 +164,7 @@ Even though we didn't hit our original fundraising goal, we gained something eve
                         <h4 class="mt-3 fw-bold">
 Major Win: Narcan Awareness Gains Big Support</h4><br><p>One of the most exciting moments at ViVa Vienna happened when we got to talk about our Narcan Accessibility Campaign with someone who really understood its impact. While chatting with people, we were introduced to <strong>Dr. Babur Lateef</strong>, a candidate for <strong>Virginia Lt. Governor</strong>. <br><br>
 
-We told him how Narcan, a medication that reverses opioid overdoses, is still way too expensive and hard to access—especially for the people who need it most. <br></p>
+We told him how Narcan, a medication that reverses opioid overdoses, is still way too expensive and hard to access, especially for the people who need it most. <br></p>
 
 <div class="row mb-5">
   <!-- Left column: image -->
@@ -174,7 +175,7 @@ We told him how Narcan, a medication that reverses opioid overdoses, is still wa
   <!-- Right column: text -->
   <div class="col-md-6">
     
-    <p><br>Dr. Lateef didn’t just listen—he supported the idea right away. As <strong>Chairman</strong> of the <strong>Prince William County School Board</strong> and former <strong>vice chairman</strong> of the UVA Health System Board, he knows how urgent this issue is. He agreed to help us spread the campaign and use his platform to get Narcan into more public places like schools and libraries. His support is a huge step forward, and it gives NOVAStrong the boost we need to turn this idea into something real. <br><br><br>
+    <p><br>Dr. Lateef didn’t just listen; he supported the idea right away. As <strong>Chairman</strong> of the <strong>Prince William County School Board</strong> and former <strong>vice chairman</strong> of the UVA Health System Board, he knows how urgent this issue is. He agreed to help us spread the campaign and use his platform to get Narcan into more public places like schools and libraries. His support is a huge step forward, and it gives NOVAStrong the boost we need to turn this idea into something real. <br><br><br>
 
 Special Thanks to Dr. Lateef for his support! 
 
