--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Future Projects</title>
+    <title>Current Projects</title>
 <link rel="icon" type="image/png" href="assets/img/tabicon.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,300i,400,400i,600,600i,700,700i,800,800i&amp;display=swap">
@@ -81,6 +81,8 @@
         <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
         <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
         <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="projects.html">Current Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="disaster-relief.html">Disaster Relief</a></li>
         <li class="nav-item"><a class="nav-link" href="awards.html">Awards &amp; Grants</a></li>
         <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
       </ul>
@@ -91,7 +93,7 @@
 </nav>
 <section class="py-5">
     <div class="container">
-        <h1 class="text-center mb-3">Future Projects</h1>
+        <h1 class="text-center mb-3">Current Projects</h1>
         <p class="motto">Working today for a stronger tomorrow.</p>
 <hr class="mx-auto mb-5" style="border: 2px solid #007BA7; width: 80px;">
    
@@ -106,11 +108,11 @@
                     <h4 class="section-header"><span class="underline">NARCAN Accessibility Campaign</span></h4>
 
                     <p style="font-size: 17px;">
-                        With opioid overdoses continuing to endanger lives in our community, NOVAStrong is launching a bold and urgent initiative: the <strong>NARCAN Accessibility Campaign</strong>. This project builds on the existing REVIVE! program, which has already trained students throughout Prince William County Public Schools in administering naloxone (NARCAN)—a life-saving medication used to reverse opioid overdoses.
+                        With opioid overdoses continuing to endanger lives in our community, NOVAStrong is launching a bold and urgent initiative: the <strong>NARCAN Accessibility Campaign</strong>. This project builds on the existing REVIVE! program, which has already trained students throughout Prince William County Public Schools in administering naloxone (NARCAN), a life-saving medication used to reverse opioid overdoses.
                         <br><br>
-                        We are proud to work alongside influential public figures like <strong>Dr. Babur Lateef</strong>, Chairman At-Large of PWCS, to expand both awareness and access to NARCAN in local schools, libraries, and community centers. Our campaign aims to install NARCAN boxes in easily accessible areas across schools, and ensure that students, staff, and community leaders are fully trained and confident in responding to emergencies.
+                        We are proud to work alongside influential public figures like <strong>Dr. Babur Lateef</strong>, Chairman At-Large of PWCS, to expand both awareness and access to NARCAN in local schools, libraries, and community centers. Our campaign has already placed naloxone boxes in high-traffic public locations like libraries and recreation centers and continues installing additional units across schools so students, staff, and community leaders are fully trained and confident in responding to emergencies.
                         <br><br>
-                        In addition to distributing physical kits, NOVAStrong will host educational workshops, training refreshers, and social media campaigns targeting stigma reduction and opioid awareness. We believe everyone deserves the knowledge and tools to save a life—because preparedness shouldn’t be optional.
+                        In addition to distributing physical kits, NOVAStrong will host educational workshops, training refreshers, and social media campaigns targeting stigma reduction and opioid awareness. We believe everyone deserves the knowledge and tools to save a life because preparedness shouldn’t be optional.
                     </p>
                 </div>
             </div>
@@ -130,7 +132,7 @@
                     <p style="font-size: 17px;">
                         NOVAStrong is launching a long-term tech equity initiative: the <strong>Electronic Refurbishment Drive</strong>. Our goal is to collect used but functional laptops, tablets, phones, and accessories from local families and businesses, refurbish them with care, and redistribute them to underserved students across Northern Virginia.
                         <br><br>
-                        With rising educational demands and an increasingly digital world, access to reliable devices is no longer a luxury—it’s a necessity. Working with experienced volunteers, tech-savvy students, and community partners, we will ensure every device is cleaned, updated, and securely wiped before being donated to a verified recipient.
+                        With rising educational demands and an increasingly digital world, access to reliable devices is no longer a luxury; it’s a necessity. Working with experienced volunteers, tech-savvy students, and community partners, we will ensure every device is cleaned, updated, and securely wiped before being donated to a verified recipient.
                         <br><br>
                         We’ll also offer beginner tech literacy sessions for first-time users, particularly senior citizens and young students. This project embodies our values of sustainability, digital inclusion, and community empowerment. By giving old devices new life, we’re building a future that’s more connected and more just.
                     </p>
