--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Future Projects</title>
+    <title>Services</title>
 <link rel="icon" type="image/png" href="assets/img/tabicon.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,300i,400,400i,600,600i,700,700i,800,800i&amp;display=swap">
@@ -87,7 +87,8 @@
       <ul class="navbar-nav ms-auto me-1">
         <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
         <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-        <li class="nav-item"><a class="nav-link" href="projects.html">Future Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="projects.html">Current Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="disaster-relief.html">Disaster Relief</a></li>
         <li class="nav-item"><a class="nav-link" href="awards.html">Awards &amp; Grants</a></li>
         <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
       </ul>
