--- a/404.html
+++ b/404.html
@@ -57,7 +57,8 @@
         <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
         <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
         <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="projects.html">Future Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="projects.html">Current Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="disaster-relief.html">Disaster Relief</a></li>
       </ul>
       <a href="donate.html" class="btn btn-primary btn-sm ms-md-3 mt-2 mt-md-0"
          style="background-color: #0d6efd; border-color: #0d6efd;">Donate</a>
