--- a/blog with rows at bottom.html
+++ b/blog with rows at bottom.html
@@ -62,7 +62,8 @@
       <ul class="navbar-nav flex-row gap-3 mb-0">
         <!-- Removed Home -->
         <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="projects.html">Future Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="projects.html">Current Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="disaster-relief.html">Disaster Relief</a></li>
         <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
       </ul>
       <a href="donate.html" class="btn btn-primary btn-sm" style="background-color: #0d6efd; border-color: #0d6efd;">Donate</a>
