--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 <li class="nav-item"><a class="nav-link text-white" href="shop.html">Shop</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="blog.html">Blog</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="services.html">Services</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="projects.html">Future Projects</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="projects.html">Current Projects</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="disaster-relief.html">Disaster Relief</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="awards.html">Awards &amp; Grants</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="about-us.html">About Us</a></li>
         </ul>
@@ -144,7 +145,7 @@
   <div class="d-flex flex-column justify-content-center align-items-center align-items-md-start text-white text-center text-md-center" style="flex: 1; max-width: 500px; margin: 0 auto;">
 
     <h4 class="fw-bold mb-3" style="color: white; font-size: 1.8rem;">
-      🏀HOOPS FOR HOMES - July 12
+      🏀HOOPS FOR HOMES - March 15
     </h4>
     <p class="mb-3 text-white" style="max-width: 360px;">
       Join our 1v1 basketball tournament at <strong>Nottoway Park</strong> in Vienna for a chance to win a <strong>PS5</strong>!
