--- a/shop.html
+++ b/shop.html
@@ -246,7 +246,8 @@
       <ul class="navbar-nav ms-auto me-1">
         <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
         <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="projects.html">Future Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="projects.html">Current Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="disaster-relief.html">Disaster Relief</a></li>
         <li class="nav-item"><a class="nav-link" href="awards.html">Awards &amp; Grants</a></li>
         <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
       </ul>
@@ -273,7 +274,7 @@
     <!-- Text Block -->
     <div style="color: white; font-size: 0.95rem; max-width: 680px;" class="sale-text-block">
 
-      <h2 class="fw-bold mb-3" style="font-size: 2.5rem;">🏀 Hoops for Homes - July 12</h2>
+      <h2 class="fw-bold mb-3" style="font-size: 2.5rem;">🏀 Hoops for Homes - March 15</h2>
       <p class style ="font-size: 1.05rem;">We’re thrilled to announce "Hoops for Homes," our upcoming charity basketball tournament at <strong>Nottoway Park</strong> in Vienna. Participants will pay a small fee to compete in a 1v1 tournament with a <strong>PS5 Prize</strong>, all to support local families struggling with rent in NOVA. Currently, we need help funding for this event through <strong><a href="donate.html" style="color: #88e7ff; text-decoration: none;">donations</a></strong>.
 
 </p>
@@ -333,7 +334,7 @@
   <!-- Header and Text (full width) -->
   <div style="text-align: left;">
     <div style="text-align: center;">
-  <h2 class="fw-bold mb-2" style="font-size: 1.3rem; color: white;">🏀 Hoops for Homes<br>July 12</h2>
+  <h2 class="fw-bold mb-2" style="font-size: 1.3rem; color: white;">🏀 Hoops for Homes<br>March 15</h2>
 
   <p style="font-size: 1.2rem; color: white;">
     We’re thrilled to announce "Hoops for Homes," our upcoming charity basketball tournament at <strong>Nottoway Park</strong> in Vienna.
