--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 	</div>
     <!-- ✅ Blue Rectangle right under newsletter -->
     <div class="mt-4 w-100 animate__animated" id="orangeBox" style="opacity: 0; border-radius: 8px; background-color: #f7941d;">
-      <div class="d-flex flex-column flex-md-row align-items-center justify-content-between h-100 text-center text-md-start px-4 py-4 py-md-0">
+      <div class="d-flex flex-column flex-md-row align-items-center justify-content-between h-100 text-center text-md-start px-4 px-md-5 py-4 py-md-5">
         <!-- Disaster Relief Spotlight -->
         <div class="d-flex flex-column justify-content-center align-items-center align-items-md-start text-white text-center text-md-start" style="flex: 1; max-width: 520px; margin: 0 auto;">
           <h4 class="fw-bold mb-3" style="color: white; font-size: 1.8rem;">
