--- a/about-us.html
+++ b/about-us.html
@@ -112,7 +112,7 @@
 
     <img src="assets/img/articles/srikanth.png" class="img-fluid mb-4" alt="..." style="width: 300px; border-radius: 8px;">
     <h5>Srikanth Bala</h5>
-    <div class="text-muted mb-2">Executive Director</div>
+    <div class="text-muted mb-2">Co-President</div>
     <p>Srikanth is a senior at Madison High School. He is the founder of NOVAStrong and a student leader with a passion for using STEM to create real-world impact. He helps lead community projects focused on equity, service, and innovation. Srikanth was inspired to start NOVAStrong after seeing how access to education and technology can vary between neighborhoods, and the effect it has on the community. Outside of school, he enjoys building electronics, working on design projects, and playing basketball with friends.</p>
 <p class="text-muted small mt-2">
   Phone: <a href="tel:5713730007" style="color: #007BA7; text-decoration: none;">(571) 373-0007</a><br>
@@ -126,7 +126,7 @@
 
     <img src="assets/img/articles/adam.png" class="img-fluid mb-4" alt="Adam Najmeddine" style="width: 300px; border-radius: 8px;">
     <h5>Adam Najmeddine</h5>
-    <div class="text-muted mb-2">Executive Director</div>
+    <div class="text-muted mb-2">Co-President</div>
     <p>Adam is a senior at Madison High School. He is a co-founder of NOVAStrong and is passionate about biomedical science and community service. He helps lead the team’s educational and outreach programs, with a focus on youth empowerment and public health. Adam was inspired to start NOVAStrong after volunteering at a local clinic, where he saw how access to healthcare and education could change lives. Outside of school, Adam enjoys playing soccer, working on science research, and spending time with friends.</p>
 <p class="text-muted small mt-2">
   Phone: <a href="tel:5712242390" style="color: #007BA7; text-decoration: none;">(571) 224-2390</a><br>
@@ -138,7 +138,7 @@
   <div class="col-md-4 mb-4 text-center">
     <img src="assets/img/articles/zakaria.png" class="img-fluid mb-4" alt="Zakaria Najmeddine" style="width: 300px; border-radius: 8px;">
     <h5>Zakaria Najmeddine</h5>
-    <div class="text-muted mb-2">Executive Director</div>
+    <div class="text-muted mb-2">Co-President</div>
     <p>Zakaria is a senior at Madison High School. He is a co-founder of NOVAStrong and is passionate about using data science and biomedical research to drive real-world impact. He helps lead STEM-based outreach and public health projects aimed at making education and innovation more accessible. Zakaria was inspired to start NOVAStrong after a college research internship, where he worked on analyzing health data to improve local clinic operations. Outside of school, Zakaria enjoys coding, biking with friends, and playing pickleball.</p>
 <p class="text-muted small mt-2">
   Phone: <a href="tel:5712242445" style="color: #007BA7; text-decoration: none;">(571) 224-2445</a><br>
@@ -150,24 +150,24 @@
 <div class="row justify-content-center text-center mb-4 gx-5">
   <!-- David (new, placed first) -->
   <div class="col-md-4 mb-4 custom-divider-end">
-    <img src="assets/img/articles/david.jpeg" class="img-fluid mb-4" alt="David Nam" style="width: 300px; height: 300px; object-fit: cover; border-radius: 8px;">
+    <img src="assets/img/articles/david.jpg" class="img-fluid mb-4" alt="David Nam" style="width: 300px; height: 300px; object-fit: cover; border-radius: 8px;">
     <h5>David Nam</h5>
-    <div class="text-muted mb-2">Vice Executive Director</div>
-    <p>As Vice Executive Director, David supports NOVAStrong’s operations and partnerships, helping align programs and outreach with the organization’s mission.</p>
+    <div class="text-muted mb-2">Vice President</div>
+    <p>David is a senior at Madison High School. He is NOVAStrong's Vice President and helps coordinate programs and partnerships. He helps organize supply drives and volunteer shifts, manages project timelines, and supports outreach with schools and local nonprofits. David also helps run device drop-off events and community workshops, making sure families leave with working laptops and simple how-to guides. Outside of school, he enjoys playing soccer and watching weekend matches with friends.</p>
     <p class="text-muted small mt-2">
-      Phone: <a href="tel:5713730007" style="color: #007BA7; text-decoration: none;">(571) 373-0007</a><br>
+      Phone: <a href="tel:5715197473" style="color: #007BA7; text-decoration: none;">(571) 519-7473</a><br>
       Email: <a href="mailto:info@novastrongproject.org" style="color: #007BA7; text-decoration: none;">info@novastrongproject.org</a>
     </p>
   </div>
 
   <!-- Rayan -->
   <div class="col-md-4 mb-4 custom-divider-end">
-    <img src="assets/img/articles/rayan.png" class="img-fluid mb-4" alt="Rayan Rashid" style="width: 300px; border-radius: 8px;">
+    <img src="assets/img/articles/ryo.jpg" class="img-fluid mb-4" alt="Rayan Rashid" style="width: 300px; border-radius: 8px;">
     <h5>Rayan Rashid</h5>
-    <div class="text-muted mb-2">Director of Technology</div>
-    <p>As Director of Technology, Rayan helps build and maintain the tools that power NOVAStrong’s programs. He focuses on improving the website, data systems, and internal workflows so volunteers and families can connect more easily and securely.</p>
+    <div class="text-muted mb-2">Technology Lead</div>
+    <p>Rayan is a senior at James Madison High School. He is NOVAStrong's Technology Lead and helps with our electronic refurbishment drives and the development and hosting of our website and shop. He helps restore donated devices, sets them up for use, and handles troubleshooting for the team. Rayan has a strong interest in computer science and has coded many iOS apps over the years. Outside of school, he enjoys playing soccer and working on small tech projects.</p>
     <p class="text-muted small mt-2">
-      Phone: <a href="tel:5713730007" style="color: #007BA7; text-decoration: none;">(571) 373-0007</a><br>
+      Phone: <a href="tel:7037178496" style="color: #007BA7; text-decoration: none;">(703) 717-8496</a><br>
       Email: <a href="mailto:info@novastrongproject.org" style="color: #007BA7; text-decoration: none;">info@novastrongproject.org</a>
     </p>
   </div>
@@ -176,10 +176,10 @@
   <div class="col-md-4 mb-4 text-center">
     <img src="assets/img/articles/shaan2.jpeg" class="img-fluid mb-4" alt="Shaan Grover" style="width: 300px; border-radius: 8px;">
     <h5>Shaan Grover</h5>
-    <div class="text-muted mb-2">Director of Marketing</div>
-    <p>As Director of Marketing, Shaan leads outreach and storytelling to grow NOVAStrong’s impact. He supports branding, social media, and community engagement efforts that help raise awareness and support for programs across Northern Virginia.</p>
+    <div class="text-muted mb-2">Health Insights Lead</div>
+    <p>Shaan is a senior at Madison High School. He is NOVAStrong's Health Insights Lead and is interested in medicine and public health. He helps with the team's data driven health projects and outreach, including overdose education and NARCAN access. Shaan was inspired to serve his community after seeing how clear information outreach can protect a community and save many lives. Outside of school, Shaan enjoys playing baseball, reading non-fiction, and hanging out with friends.</p>
     <p class="text-muted small mt-2">
-      Phone: <a href="tel:5713730007" style="color: #007BA7; text-decoration: none;">(571) 373-0007</a><br>
+      Phone: <a href="tel:5712514856" style="color: #007BA7; text-decoration: none;">(571) 251-4856</a><br>
       Email: <a href="mailto:info@novastrongproject.org" style="color: #007BA7; text-decoration: none;">info@novastrongproject.org</a>
     </p>
   </div>
@@ -191,10 +191,10 @@
   <div class="col-md-4 mb-4 text-center">
     <img src="assets/img/articles/charlie.JPEG" class="img-fluid mb-4" alt="Charlie Bergeron" style="width: 300px; height: 300px; object-fit: cover; object-position: 50% 35%; border-radius: 8px;">
     <h5>Charlie Bergeron</h5>
-    <div class="text-muted mb-2">Director of Growth</div>
-    <p>As Director of Growth, Charlie helps expand NOVAStrong’s partnerships and outreach so we can serve more families and neighborhoods across NOVA.</p>
+    <div class="text-muted mb-2">Marketing Lead</div>
+    <p>Charlie is a senior at Madison High School. He is NOVAStrong's Marketing Lead and plans to study premed. He helps grow the team's partnerships and outreach, managing social media, school events, and local business collaborations. Charlie was inspired to help out after volunteering at a student health fair for underprivileged families. Outside of school, Charlie enjoys playing tennis, basketball, and streaming.</p>
     <p class="text-muted small mt-2">
-      Phone: <a href="tel:5713730007" style="color: #007BA7; text-decoration: none;">(571) 373-0007</a><br>
+      Phone: <a href="tel:7032289066" style="color: #007BA7; text-decoration: none;">(703) 228-9066</a><br>
       Email: <a href="mailto:info@novastrongproject.org" style="color: #007BA7; text-decoration: none;">info@novastrongproject.org</a>
     </p>
   </div>
