--- a/awards.html
+++ b/awards.html
@@ -51,8 +51,8 @@
         </div>
         <div class="col-lg-6">
           <div class="card p-4 border-0 shadow-sm">
-            <h4 class="mb-3"><span class="underline">Pollination Project Grant</span></h4>
-            <p style="font-size:17px;">This grant supports youth-led initiatives that create practical change in local communities. Funding from the Pollination Project helps NOVAStrong accelerate early-stage ideas into real, on-the-ground impact across Northern Virginia.</p>
+            <h4 class="mb-3"><span class="underline">Pollination Project Grant Awardee</span></h4>
+            <p style="font-size:17px;">This grant supports youth-led initiatives that create practical change in local communities. Funding from the Pollination Project helps NOVAStrong accelerate early-stage ideas into real, on-the-ground impact across Northern Virginia. <strong>Their funding specifically enabled us to purchase NARCAN for facilities without easy access to this life-saving drug</strong>, ensuring critical spaces in our community are equipped to respond to opioid overdoses.</p>
           </div>
         </div>
       </div>
@@ -66,8 +66,8 @@
         </div>
         <div class="col-lg-6">
           <div class="card p-4 border-0 shadow-sm">
-            <h4 class="mb-3"><span class="underline">Home Depot Foundation Grant</span></h4>
-            <p style="font-size:17px;">Support from the Home Depot Foundation fuels hands-on service projects that improve spaces, building resources, and supplying materials for neighborhood-focused efforts that strengthen families and seniors in NOVA.</p>
+            <h4 class="mb-3"><span class="underline">Home Depot Foundation Grant Awardee</span></h4>
+            <p style="font-size:17px;">Support from the Home Depot Foundation fuels hands-on service projects that improve spaces, building resources, and supplying materials for neighborhood-focused efforts that strengthen families and seniors in NOVA. <strong>They especially provided crucial support for a lot of our Moroccan Earthquake Disaster Relief efforts</strong>, helping us deliver essential supplies and aid to those affected by the disaster.</p>
           </div>
         </div>
       </div>
