--- a/projects.html
+++ b/projects.html
@@ -101,18 +101,18 @@
         <!-- NARCAN Accessibility Campaign -->
         <div class="row align-items-center mb-5">
             <div class="col-lg-6 text-center mb-4 mb-lg-0">
-                <img src="assets/img/articles/narcan.png" class="img-fluid rounded shadow-sm" style="max-height: 500px;" alt="NARCAN Campaign Image">
+                <img src="assets/img/articles/babur.jpg" class="img-fluid rounded shadow-sm" style="max-height: 500px;" alt="NARCAN Campaign Image">
             </div>
             <div class="col-lg-6">
                 <div class="card p-4 border-0 shadow-sm">
                     <h4 class="section-header"><span class="underline">NARCAN Accessibility Campaign</span></h4>
 
                     <p style="font-size: 17px;">
-                        With opioid overdoses continuing to endanger lives in our community, NOVAStrong is launching a bold and urgent initiative: the <strong>NARCAN Accessibility Campaign</strong>. This project builds on the existing REVIVE! program, which has already trained students throughout Prince William County Public Schools in administering naloxone (NARCAN), a life-saving medication used to reverse opioid overdoses.
+                        With opioid overdoses continuing to endanger lives in our community, NOVAStrong launched the NARCAN Accessibility Campaign after a pivotal kickoff with Dr. Babur Lateef at Viva! Vienna! That moment moved our work from idea to action. It set a clear goal, expand access to naloxone and make overdose response a normal part of community safety.
                         <br><br>
-                        We are proud to work alongside influential public figures like <strong>Dr. Babur Lateef</strong>, Chairman At-Large of PWCS, to expand both awareness and access to NARCAN in local schools, libraries, and community centers. Our campaign has already placed naloxone boxes in high-traffic public locations like libraries and recreation centers and continues installing additional units across schools so students, staff, and community leaders are fully trained and confident in responding to emergencies.
+                        We partnered with the Optimist Club of Greater Vienna and secured dedicated funding in their October budget to scale placements and training. <strong>Using that support, we placed NARCAN boxes across Vienna's public and commercial spaces, including libraries, recreation sites, shops, and other high-traffic locations.</strong> We continue adding units in schools and workplaces so students, staff, and local businesses are ready to act.
                         <br><br>
-                        In addition to distributing physical kits, NOVAStrong will host educational workshops, training refreshers, and social media campaigns targeting stigma reduction and opioid awareness. We believe everyone deserves the knowledge and tools to save a life because preparedness shouldn’t be optional.
+                        <strong>Alongside distribution, NOVAStrong runs workshops, quick training refreshers, and social campaigns to reduce stigma and raise awareness.</strong> We focus on simple steps, where to find NARCAN and how to use it in under two minutes. Everyone deserves the knowledge and tools to save a life, and preparedness should be standard for our town.
                     </p>
                 </div>
             </div>
@@ -132,9 +132,9 @@
                     <p style="font-size: 17px;">
                         NOVAStrong is launching a long-term tech equity initiative: the <strong>Electronic Refurbishment Drive</strong>. Our goal is to collect used but functional laptops, tablets, phones, and accessories from local families and businesses, refurbish them with care, and redistribute them to underserved students across Northern Virginia.
                         <br><br>
-                        With rising educational demands and an increasingly digital world, access to reliable devices is no longer a luxury; it’s a necessity. Working with experienced volunteers, tech-savvy students, and community partners, we will ensure every device is cleaned, updated, and securely wiped before being donated to a verified recipient.
+                        With rising educational demands and an increasingly digital world, access to reliable devices is no longer a luxury; it's a necessity. Working with experienced volunteers, tech-savvy students, and community partners, we ensure every device is cleaned, updated, and securely wiped before being donated to a verified recipient. This project embodies our values of sustainability, digital inclusion, and community empowerment.
                         <br><br>
-                        We’ll also offer beginner tech literacy sessions for first-time users, particularly senior citizens and young students. This project embodies our values of sustainability, digital inclusion, and community empowerment. By giving old devices new life, we’re building a future that’s more connected and more just.
+                        <strong>Our next drive will be held December 12th from 9 AM to 5 PM at the Vienna Community Center.</strong> <strong>The devices will be held for refurbishment and be shipped out mid-January to struggling communities in Falls Church.</strong>
                     </p>
                 </div>
             </div>
